# peek

./: CONTRIBUTING.md  LICENSE  README.md  components.json  opencode.json  package.json
.github/workflows/: release.yml
src/: App.tsx  Overlay.tsx  index.css  main.tsx  overlay.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  config.rs  db.rs  formatter.rs  lib.rs  main.rs  monitor.rs  overlay.rs  overlay_state.rs  tray.rs
