[package]
name = "peek"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "peek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-autostart = "2"
anyhow = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
dirs = "5"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
wmi = "0.13"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[package.metadata.tauri]
remove_unused_plugins = ["opener"]
